<resources>
    <string name="app_name">PostIt</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="next">Next</string>
    <string name="create_password">Create Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="finish">Finish</string>
    <string name="what_s_your_email">What\'s your email</string>
    <string name="yourname_company_com">yourname@company.com</string>
    <string name="home_caps">HOME</string>
    <string name="stories_caps">STORIES</string>
    <string name="notifications_caps">NOTIFICATIONS</string>
    <string name="search_caps">SEARCH</string>
    <string name="news_feed">news feed</string>
    <string name="stories">stories</string>
    <string name="notifications">notifications</string>
    <string name="search">search</string>
    <string name="title_activity_dashboard">Dashboard Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="welcome_to">Welcome to</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="create_account">Create account</string>
    <string name="password_tip">Your password must include at least one\nsymbol and be 8 or more characters long.</string>
    <string name="back_button">back button</string>
    <string name="upload_new_image">Upload New Image</string>
    <string name="delete_image">Delete image</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_image">Edit Image</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="update">Update</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="posts">posts</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="fields_are_empty">Fields are empty</string>
    <string name="passwords_not_match">Passwords don\'t match</string>
    <string name="ok">OK</string>
    <string name="add_comment">Add a comment…</string>
    <string name="post">Post</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="obsessed_with_fahim_md_s_youtube_channel_love_to_go_shopping_on_weekends_and_loveee_food_foodielife">Obsessed with Fahim MD\'s YouTube channel, love to go shopping on weekends and loveee food #foodielife</string>
    <string name="creative_designer_argoradius">Creative Designer @ArgoRadius</string>
    <string name="follow">Follow</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="do_you_really_want_to_delete_comment">Do you really want to delete comment:</string>
    <string name="comment">Comment</string>
    <string name="username_is_empty">Username is empty</string>
    <string name="choose_username">Choose username</string>
    <string name="username">Username</string>
    <string name="username_is_taken">Username is taken!</string>
    <string name="email_is_taken">Email is taken!</string>
    <string name="password_length">Password length should be in range of 8–32</string>
    <string name="search_">Search…</string>
    <string name="add_to_story">Add to Story</string>
    <string name="full_name">Full Name</string>
    <string name="started_following_you">Started following you.</string>
    <string name="liked_your_post">Liked your post.</string>
    <string name="add_post">Publish Your Post</string>
    <string name="add_a_description">Add a Description</string>
    <string name="add_a_title">Add a Title</string>
    <string name="unfollow">Unfollow</string>
    <string name="edit_post">Edit post</string>
    <string name="delete_post">Delete post</string>
    <string name="choose_profile_image">Choose profile image</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="your_news_feed_is_empty">Your news feed is empty!</string>
    <string name="add_a_story">Add a story</string>
    <string name="your_bio">Your bio</string>
    <string name="update_post">Update post</string>
</resources>
