<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:orientation="vertical"
    tools:context=".ui.profile.EditProfileActivity">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back_button"
        android:src="@mipmap/ic_back_arrow" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:src="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="120dp"
            android:textAllCaps="false"
            android:background="@drawable/btn_add_photo"
            android:text="@string/edit_profile"
            android:scaleType="fitCenter"
            android:layout_marginTop="-20dp"
            android:layout_gravity="center"
            android:paddingVertical="10dp"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/profileFirstName"
                android:textColor="#434b56"
                android:textSize="17sp"
                android:layout_marginEnd="12dp"
                android:text="@string/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/profileLastName"
                android:textColor="#434b56"
                android:textSize="17sp"
                android:text="@string/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:textColor="#434b56"
            android:text="@string/posts"
            android:gravity="center"
            android:textSize="35sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</LinearLayout>