<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".ui.auth.PreAuthActivity">

    <TextView
        android:id="@+id/logInTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textColor="#fff"
        android:gravity="end"
        android:text="@string/have_an_account_already"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_logo_white"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_to"
        android:textColor="#fff"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInGoogleButton"
        android:layout_width="match_parent"
        android:background="@drawable/btn_google"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:paddingVertical="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateAccount"
        android:paddingVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/btn_stroke_style"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="#fff"
        />






</LinearLayout>