<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:src="@mipmap/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textColor="#434b56"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/et_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingVertical="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />


        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingVertical="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorBlue"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="@drawable/btn_solid_style"
            android:paddingVertical="20dp"
            android:text="@string/login"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/signUpTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/don_t_have_account"
            android:textColor="#484d54"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>