<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:src="@mipmap/baseline_keyboard_arrow_left_black_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/what_s_your_name"
            android:textColor="#434b56"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/et_background"
            android:hint="@string/first_name"
            android:inputType="textEmailAddress"
            android:paddingVertical="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="@drawable/et_background"
            android:hint="@string/last_name"
            android:inputType="textPassword"
            android:paddingVertical="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="@drawable/btn_solid_style"
            android:paddingVertical="20dp"
            android:text="@string/next"
            android:textColor="#fff"
            android:layout_marginBottom="50dp"/>

</LinearLayout>
</ScrollView>