<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.post.create_post.CreatePostActivity">


    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/createPostImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/img_profile" />

        <TextView
            android:id="@+id/choosePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/upload_photo"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_a_title"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etAddPostTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLength="64"
            android:paddingVertical="15dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_a_description"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etAddPostDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:paddingVertical="15dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreatePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_gradient_background"
            android:paddingVertical="20dp"
            android:text="@string/add_post"
            android:textColor="#fff" />


    </LinearLayout>

</ScrollView>