<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@color/colorPrimary" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="150dp"
        android:text="@string/create_password"
        android:textColor="#434b56"
        android:textSize="30sp" />

    <TextView
        android:textStyle="bold"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        tools:text="Your password must include at least one
symbol and be 8 or more characters long."
        android:textColor="#484d54"
        android:textSize="15sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="#FFF"
        app:boxStrokeColor="#FFF"
        app:boxStrokeWidth="0dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:hint="@string/password"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="#FFF"
        app:boxStrokeColor="#FFF"
        app:boxStrokeWidth="0dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:hint="@string/repeat_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_solid_style"
        android:paddingVertical="20dp"
        android:text="@string/finish"
        android:textColor="#fff" />

</LinearLayout>
