<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:src="@mipmap/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/choose_profile_image"
            android:textColor="#434b56"
            android:textSize="26sp"
            android:textStyle="bold" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImageChooser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginVertical="20dp"
            android:layout_gravity="center_horizontal"
            android:src="#000"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_solid_style"
            android:paddingVertical="20dp"
            android:text="@string/next"

            android:textColor="#fff" />

        <TextView
            android:id="@+id/btnSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_stroke_style"
            android:paddingVertical="20dp"
            android:gravity="end"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/skip_for_now"
            android:textColor="#000" />


    </LinearLayout>
</ScrollView>