<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post.create_post.CreatePostActivity">


    <LinearLayout
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_a_title"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etAddPostTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLength="64"
            android:paddingVertical="15dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_a_description"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etAddPostDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:paddingVertical="15dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreatePost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/btn_gradient_background"
                android:paddingVertical="20dp"
                android:layout_gravity="bottom"
                android:text="@string/add_post"
                android:textColor="#fff" />
        </FrameLayout>

    </LinearLayout>




</ScrollView>